Standardized CMake directory variables (`CMAKE_CURRENT_*_DIR` → `PROJECT_*_DIR`)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ TARGET_INCLUDE_DIRECTORIES(
     units
     INTERFACE
         "$<INSTALL_INTERFACE:include/>"
-        "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/>"
+        "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include/>"
 )
 
 
@@ -33,11 +33,11 @@ INSTALL(
 
 INCLUDE( CMakePackageConfigHelpers )
 WRITE_BASIC_PACKAGE_VERSION_FILE(
-    "${CMAKE_CURRENT_BINARY_DIR}/jmunits-config-version.cmake"
+    "${PROJECT_BINARY_DIR}/jmunits-config-version.cmake"
     COMPATIBILITY SameMinorVersion
 )
 INSTALL(
-    FILES "${CMAKE_CURRENT_BINARY_DIR}/jmunits-config-version.cmake"
+    FILES "${PROJECT_BINARY_DIR}/jmunits-config-version.cmake"
     DESTINATION "lib/cmake/jmunits/"
 )
 
