Applies unit test compile options to `test_utils` library

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,25 +1,33 @@
 ADD_SUBDIRECTORY( "test_utils/" )
 
 
-FOREACH( TEST_NAME
+SET( TEST_NAMES
     "Unit_Tests"
 )
+
+
+FOREACH( TEST_NAME ${TEST_NAMES} )
     STRING( REPLACE "_" "" DISPLAY_NAME "${TEST_NAME}" )
     STRING( TOLOWER "${TEST_NAME}" EXECUTABLE_NAME )
-
+    
     ADD_EXECUTABLE( "${EXECUTABLE_NAME}" )
-
+    
     ADD_TEST(
         NAME "UnitTests"
         COMMAND "${EXECUTABLE_NAME}"
     )
-
+    
     TARGET_SOURCES(
         "${EXECUTABLE_NAME}"
         PRIVATE "unit_tests/${EXECUTABLE_NAME}.cpp"
     )
     TARGET_LINK_LIBRARIES( "${EXECUTABLE_NAME}" PRIVATE test_utils )
+ENDFOREACH()
 
+
+# Apply compile options to `test_utils` library, too
+FOREACH( NAME "test_utils" ${TEST_NAMES} )
+    STRING( TOLOWER "${NAME}" TARGET_NAME )
     IF(
            "${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU"
         OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang"
@@ -27,7 +35,7 @@ FOREACH( TEST_NAME
         OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Intel"
     )
         TARGET_COMPILE_OPTIONS(
-            "${EXECUTABLE_NAME}"
+            "${TARGET_NAME}"
             PRIVATE
                 "-g"
                 "-Werror"
@@ -48,7 +56,7 @@ FOREACH( TEST_NAME
         )
         IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
             TARGET_COMPILE_OPTIONS(
-                "${EXECUTABLE_NAME}"
+                "${TARGET_NAME}"
                 PRIVATE
                     "-Wduplicated-cond"
                     "-Wduplicated-branches"
@@ -59,12 +67,11 @@ FOREACH( TEST_NAME
     
     ELSEIF( "${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC" )
         TARGET_COMPILE_OPTIONS(
-            "${EXECUTABLE_NAME}"
+            "${TARGET_NAME}"
             PRIVATE
                 "/DEBUG"
                 "/WX"
                 "/Wall"
         )
     ENDIF()
-    
 ENDFOREACH()
