Moved unit tests to Viktor Kirilov's doctest (https://github.com/onqtam/doctest); added a "conanfile.txt" for easy, build-local installation of doctest

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,18 @@ PROJECT(
     VERSION 0.2
     LANGUAGES CXX
 )
+
 SET( CMAKE_CXX_STANDARD 11 )
 SET( CMAKE_CXX_STANDARD_REQUIRED ON )
 SET( CMAKE_CXX_EXTENSIONS OFF )
+
+LIST( APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/CMakeModules/" )
+IF( EXISTS "${CMAKE_BINARY_DIR}/conanbuildinfo.cmake" )
+    INCLUDE( "${CMAKE_BINARY_DIR}/conanbuildinfo.cmake" )
+    CONAN_SET_FIND_PATHS()
+ENDIF()
+
+INCLUDE( CTest )
 
 
 ADD_LIBRARY( units INTERFACE )
@@ -54,5 +63,6 @@ INSTALL(
 EXPORT( EXPORT "JadeMatrix-units-config" FILE "JadeMatrix-units-config.cmake" )
 
 
-ENABLE_TESTING()
-ADD_SUBDIRECTORY( "tests/" )
+IF( BUILD_TESTING )
+    ADD_SUBDIRECTORY( "tests/" )
+ENDIF()
