Added basic unit tests for custom unit value types

--- a/tests/suites/CMakeLists.txt
+++ b/tests/suites/CMakeLists.txt
@@ -8,6 +8,7 @@ ADD_CUSTOM_TARGET( tests ALL )
 FOREACH( SUITE IN ITEMS
     "angular"
     "custom_unit"
+    "custom_value_type"
     "linear_imperial"
     "linear_metric"
     "linear_nautical"
