Initial attempt at generating compile-tests for custom value types

--- a/tests/compile/CMakeLists.txt
+++ b/tests/compile/CMakeLists.txt
@@ -133,3 +133,213 @@ UNITS_ADD_COMPILE_TEST( "implicit_storage_conversion"
         ${UNITS_COMPILE_OPTIONS}
         ${UNITS_COMPILE_OPTIONS_CONVERSION}
 )
+
+
+
+
+FUNCTION( DEFINE_CONSTRUCT_PASSTHROUGH_TEST_CASE
+    RHS_TYPE
+    ADD_STR
+    LHS
+    RHS
+)
+    SET( OPERAND_plu "+" )
+    SET( OPERAND_min "-" )
+    SET( OPERAND_mul "*" )
+    SET( OPERAND_div "/" )
+    SET( OPERAND_mod "%" )
+    
+    SET( TEST_NAME
+        "custom_value_type_operator_construct_from_unit${ADD_STR}"
+    )
+    SET( SOURCE_FILE "${CMAKE_CURRENT_BINARY_DIR}/${TEST_NAME}.cpp" )
+    
+    FILE( REMOVE "${SOURCE_FILE}" )
+    FOREACH( LINE IN ITEMS
+        "#include \"${PROJECT_SOURCE_DIR}/tests/suites/custom_value_type.hpp\"\n"
+        "#include <type_traits>  // is_same\n"
+        "#include <units/angular.hpp>\n"
+        "#include <units/linear.hpp>\n"
+        "#include <units/temporal.hpp>\n"
+        "namespace units = ::JadeMatrix::units;\n"
+        "units::${RHS}< ${RHS_TYPE} > val1{ 8304.51L };\n"
+        "units::${LHS}< ::custom::bar > val2{ val1 };\n"
+    )
+        FILE( APPEND "${SOURCE_FILE}" "${LINE}" )
+    ENDFOREACH()
+    UNITS_ADD_COMPILE_TEST( "${TEST_NAME}"
+        FILE "${SOURCE_FILE}"
+        COMPILE_OPTIONS
+            ${UNITS_COMPILE_OPTIONS}
+            ${UNITS_COMPILE_OPTIONS_CONVERSION}
+    )
+ENDFUNCTION()
+
+
+
+
+FUNCTION( DEFINE_ARITHMETIC_PASSTHROUGH_TEST_CASE
+    RHS_TYPE
+    ADD_STR
+    OPERAND
+    LHS
+    RHS
+)
+    SET( OPERAND_plu "+" )
+    SET( OPERAND_min "-" )
+    SET( OPERAND_mul "*" )
+    SET( OPERAND_div "/" )
+    SET( OPERAND_mod "%" )
+    
+    SET( TEST_NAME
+        "custom_value_type_operator_${OPERAND}_passthrough${ADD_STR}"
+    )
+    SET( SOURCE_FILE "${CMAKE_CURRENT_BINARY_DIR}/${TEST_NAME}.cpp" )
+    
+    FILE( REMOVE "${SOURCE_FILE}" )
+    FOREACH( LINE IN ITEMS
+        "#include \"${PROJECT_SOURCE_DIR}/tests/suites/custom_value_type.hpp\"\n"
+        "#include <type_traits>  // is_same\n"
+        "#include <units/angular.hpp>\n"
+        "#include <units/linear.hpp>\n"
+        "#include <units/temporal.hpp>\n"
+        "namespace units = ::JadeMatrix::units;\n"
+        "units::${LHS}< ::custom::bar > val1{ 123.4L };\n"
+        "units::${RHS}< ${RHS_TYPE} > val2{ 123.4L };\n"
+        "static_assert( std::is_same<\n"
+        "    decltype( val1 ${OPERAND_${OPERAND}} val2 )::value_type,\n"
+        "    ::custom::tagged< ::custom::bar, ::custom::bar::${OPERAND}_tag >\n"
+        ">::value, \"unit operator ${OPERAND_${OPERAND}} passthrough failed\" );\n"
+    )
+        FILE( APPEND "${SOURCE_FILE}" "${LINE}" )
+    ENDFOREACH()
+    UNITS_ADD_COMPILE_TEST( "${TEST_NAME}"
+        FILE "${SOURCE_FILE}"
+        COMPILE_OPTIONS
+            ${UNITS_COMPILE_OPTIONS}
+            ${UNITS_COMPILE_OPTIONS_CONVERSION}
+    )
+ENDFUNCTION()
+
+
+
+
+FUNCTION( DEFINE_COMPARE_PASSTHROUGH_TEST_CASE
+    RHS_TYPE
+    ADD_STR
+    OPERAND
+    LHS
+    RHS
+)
+    SET( OPERAND_eq "==" )
+    SET( OPERAND_ne "!=" )
+    SET( OPERAND_gt ">"  )
+    SET( OPERAND_lt "<"  )
+    SET( OPERAND_ge ">=" )
+    SET( OPERAND_le "<=" )
+    
+    SET( TEST_NAME
+        "custom_value_type_operator_${OPERAND}_passthrough${ADD_STR}"
+    )
+    SET( SOURCE_FILE "${CMAKE_CURRENT_BINARY_DIR}/${TEST_NAME}.cpp" )
+    
+    FILE( REMOVE "${SOURCE_FILE}" )
+    FOREACH( LINE IN ITEMS
+        "#include \"${PROJECT_SOURCE_DIR}/tests/suites/custom_value_type.hpp\"\n"
+        "#include <type_traits>  // is_same\n"
+        "#include <units/angular.hpp>\n"
+        "#include <units/linear.hpp>\n"
+        "#include <units/temporal.hpp>\n"
+        "namespace units = ::JadeMatrix::units;\n"
+        "units::${LHS}< ::custom::bar > val1{ 123.4L };\n"
+        "units::${RHS}< ${RHS_TYPE} > val2{ 123.4L };\n"
+        "static_assert( std::is_same<\n"
+        "    decltype( val1 ${OPERAND_${OPERAND}} val2 ),\n"
+        "    ::custom::tagged< ::custom::bar::cmp, ::custom::bar::${OPERAND}_tag >\n"
+        ">::value, \"unit operator ${OPERAND_${OPERAND}} passthrough failed\" );\n"
+    )
+        FILE( APPEND "${SOURCE_FILE}" "${LINE}" )
+    ENDFOREACH()
+    UNITS_ADD_COMPILE_TEST( "${TEST_NAME}"
+        FILE "${SOURCE_FILE}"
+        COMPILE_OPTIONS
+            ${UNITS_COMPILE_OPTIONS}
+            ${UNITS_COMPILE_OPTIONS_CONVERSION}
+    )
+ENDFUNCTION()
+
+
+
+
+FUNCTION( DEFINE_ASSIGN_NO_PASSTHROUGH_TEST_CASE
+    RHS_TYPE
+    ADD_STR
+    OPERAND
+    LHS
+    RHS
+)
+    SET( OPERAND_plu "+" )
+    SET( OPERAND_min "-" )
+    SET( OPERAND_mul "*" )
+    SET( OPERAND_div "/" )
+    SET( OPERAND_mod "%" )
+    
+    SET( TEST_NAME
+        "custom_value_type_operator_${OPERAND}_assign_no_passthrough${ADD_STR}"
+    )
+    SET( SOURCE_FILE "${CMAKE_CURRENT_BINARY_DIR}/${TEST_NAME}.cpp" )
+    
+    FILE( REMOVE "${SOURCE_FILE}" )
+    FOREACH( LINE IN ITEMS
+        "#include \"${PROJECT_SOURCE_DIR}/tests/suites/custom_value_type.hpp\"\n"
+        "#include <type_traits>  // is_same\n"
+        "#include <units/angular.hpp>\n"
+        "#include <units/linear.hpp>\n"
+        "#include <units/temporal.hpp>\n"
+        "namespace units = ::JadeMatrix::units;\n"
+        "units::${LHS}< ::custom::bar > val1{ 123.4L };\n"
+        "units::${RHS}< ${RHS_TYPE} > val2{ 123.4L };\n"
+        "static_assert( std::is_same<\n"
+        "    decltype( val1 ${OPERAND_${OPERAND}}= val2 ),\n"
+        "    units::${LHS}< ::custom::bar >&\n"
+        ">::value, \"unit operator ${OPERAND_${OPERAND}}= no passthrough failed\" );\n"
+    )
+        FILE( APPEND "${SOURCE_FILE}" "${LINE}" )
+    ENDFOREACH()
+    UNITS_ADD_COMPILE_TEST( "${TEST_NAME}"
+        FILE "${SOURCE_FILE}"
+        COMPILE_OPTIONS
+            ${UNITS_COMPILE_OPTIONS}
+            ${UNITS_COMPILE_OPTIONS_CONVERSION}
+    )
+ENDFUNCTION()
+
+FOREACH( VARIANT IN ITEMS
+    "::custom::bar\;"
+    "long double\;_with_convertible_type"
+)
+    SET( VARIANT ${VARIANT} ) # LIST-ify
+    LIST( GET VARIANT 0 RHS_TYPE )
+    LIST( GET VARIANT 1 ADD_STR  )
+    
+    DEFINE_CONSTRUCT_PASSTHROUGH_TEST_CASE ( "${RHS_TYPE}" "${ADD_STR}"           "terarevolutions"  "petadegrees" )
+    
+    DEFINE_ARITHMETIC_PASSTHROUGH_TEST_CASE( "${RHS_TYPE}" "${ADD_STR}" "mul"         "revolutions"      "radians" )
+    DEFINE_ARITHMETIC_PASSTHROUGH_TEST_CASE( "${RHS_TYPE}" "${ADD_STR}" "div"         "nanoseconds"        "hours" )
+    DEFINE_ARITHMETIC_PASSTHROUGH_TEST_CASE( "${RHS_TYPE}" "${ADD_STR}" "mod"         "dozen_hours" "microminutes" )
+    DEFINE_ARITHMETIC_PASSTHROUGH_TEST_CASE( "${RHS_TYPE}" "${ADD_STR}" "plu"              "meters"    "kiloyards" )
+    DEFINE_ARITHMETIC_PASSTHROUGH_TEST_CASE( "${RHS_TYPE}" "${ADD_STR}" "min"          "arcseconds"   "arcminutes" )
+    
+    DEFINE_COMPARE_PASSTHROUGH_TEST_CASE   ( "${RHS_TYPE}" "${ADD_STR}" "eq"           "gigameters"   "nanometers" )
+    DEFINE_COMPARE_PASSTHROUGH_TEST_CASE   ( "${RHS_TYPE}" "${ADD_STR}" "ne"          "revolutions"  "revolutions" )
+    DEFINE_COMPARE_PASSTHROUGH_TEST_CASE   ( "${RHS_TYPE}" "${ADD_STR}" "gt"              "minutes"      "seconds" )
+    DEFINE_COMPARE_PASSTHROUGH_TEST_CASE   ( "${RHS_TYPE}" "${ADD_STR}" "lt"                 "feet"       "inches" )
+    DEFINE_COMPARE_PASSTHROUGH_TEST_CASE   ( "${RHS_TYPE}" "${ADD_STR}" "ge"       "nanoarcseconds" "centiradians" )
+    DEFINE_COMPARE_PASSTHROUGH_TEST_CASE   ( "${RHS_TYPE}" "${ADD_STR}" "le" "dozen_nautical_miles"  "centimeters" )
+    
+    DEFINE_ASSIGN_NO_PASSTHROUGH_TEST_CASE ( "${RHS_TYPE}" "${ADD_STR}" "plu"         "revolutions"      "radians" )
+    DEFINE_ASSIGN_NO_PASSTHROUGH_TEST_CASE ( "${RHS_TYPE}" "${ADD_STR}" "min"         "nanoseconds"        "hours" )
+    DEFINE_ASSIGN_NO_PASSTHROUGH_TEST_CASE ( "${RHS_TYPE}" "${ADD_STR}" "mul"         "dozen_hours" "microminutes" )
+    DEFINE_ASSIGN_NO_PASSTHROUGH_TEST_CASE ( "${RHS_TYPE}" "${ADD_STR}" "div"              "meters"    "kiloyards" )
+    DEFINE_ASSIGN_NO_PASSTHROUGH_TEST_CASE ( "${RHS_TYPE}" "${ADD_STR}" "mod"          "arcseconds"   "arcminutes" )
+ENDFOREACH()
