Added compile test for multiplication & division by non-units

--- a/tests/compile/CMakeLists.txt
+++ b/tests/compile/CMakeLists.txt
@@ -96,6 +96,7 @@ UNITS_ADD_COMPILE_TEST( readme
 
 # Positive compile tests
 FOREACH( COMPILE IN ITEMS
+    "mult_div_promotion"
     "ratio_conversion"
     "per_conversion"
 )
