Fixed compile test generation not being able to handle build directories containing spaces

--- a/tests/compile/CMakeLists.txt
+++ b/tests/compile/CMakeLists.txt
@@ -76,9 +76,9 @@ ADD_CUSTOM_COMMAND(
     OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/readme_tests.cpp"
     COMMAND "${CMAKE_COMMAND}"
     ARGS
-        -D "PROJECT_SOURCE_DIR=\"${PROJECT_SOURCE_DIR}\""
-        -D "SOURCE_DIR=\"${CMAKE_CURRENT_SOURCE_DIR}\""
-        -D "BINARY_DIR=\"${CMAKE_CURRENT_BINARY_DIR}\""
+        -D "PROJECT_SOURCE_DIR=${PROJECT_SOURCE_DIR}"
+        -D "SOURCE_DIR=${CMAKE_CURRENT_SOURCE_DIR}"
+        -D "BINARY_DIR=${CMAKE_CURRENT_BINARY_DIR}"
         -P "${README_GEN_SCRIPT}"
     MAIN_DEPENDENCY "${README_GEN_SCRIPT}"
     DEPENDS "${PROJECT_SOURCE_DIR}/README.md"
